Eevee MotionBlur steps setting make ao pass darker #81157

Closed
opened 2020-09-25 03:30:10 +02:00 by Mill Yang · 4 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-24 19:43, hash: 0106e17f07
Worked: 2.90.1
Regression introduced by: 68651534c2

Short description of error
Eevee MotionBlur steps setting make ao pass darker.

1.png steps 1
4.png steps 4

Exact steps for others to reproduce the error
1.Enable Ambient Occlusion ,Motion Blur and AO pass in Eevee .
2.Set the Eevee motion blur steps more than 1 ,then the ao pass is darker than the default setting.

#81157.blend

**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 451.67 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-24 19:43, hash: `0106e17f07` Worked: 2.90.1 Regression introduced by: 68651534c2 **Short description of error** Eevee MotionBlur steps setting make ao pass darker. ![1.png](https://archive.blender.org/developer/F8917880/1.png) steps 1 ![4.png](https://archive.blender.org/developer/F8917874/4.png) steps 4 **Exact steps for others to reproduce the error** 1.Enable Ambient Occlusion ,Motion Blur and AO pass in Eevee . 2.Set the Eevee motion blur steps more than 1 ,then the ao pass is darker than the default setting. [#81157.blend](https://archive.blender.org/developer/F8918803/T81157.blend)
Author

Added subscriber: @Mill-Yang

Added subscriber: @Mill-Yang
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jeroen Bakker self-assigned this 2020-09-25 09:09:42 +02:00

This issue was referenced by 59afbf0c04

This issue was referenced by 59afbf0c047588fc3d819b22d7a854e37b20d081
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81157
No description provided.