Fix T81157: Eevee MotionBlur steps setting make ao pass darker

Issue introduced by 68651534c263 due to an incorrect merge/rebase
It was resetting the AO buffer every time the time step happened.